Use position: fixed to fix overscroll bounce shifting headers
See https://github.com/w3c/csswg-drafts/issues/8309 for more details
on the interaction between overscroll and position: sticky.

Fixes #490

--- a/src/components/drawer-header/DrawerHeader.module.scss
+++ b/src/components/drawer-header/DrawerHeader.module.scss
@@ -8,7 +8,7 @@
 }
 
 .drawerHeaderContainer {
-  position: sticky;
+  position: fixed;
   z-index: 111111;
   top: 0;
   right: 0;
