--- a/src/components/main-pane-header/styles.module.scss
+++ b/src/components/main-pane-header/styles.module.scss
@@ -12,7 +12,7 @@
 }
 
 .header {
-  position: sticky;
+  position: fixed;
   z-index: 11111;
   top: 0;
   right: 0;
