--- a/src/components/right-drawer/styles.module.scss
+++ b/src/components/right-drawer/styles.module.scss
@@ -36,7 +36,7 @@
 .roleTitle {
   position: sticky;
   z-index: 11111;
-  top: calc(var(--header-height) + 6px);
+  top: 3px;
   display: flex;
   align-items: center;
   padding: 4px;
