--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@ body {
 
 :root {
   --header-height: 50px;
+  --header-gap: 3px;
+  --header-offset: calc(var(--header-height) + var(--header-gap));
 }
 
 #root.mobileAgent {
